# HelloContact

./: .gitignore  AddressBook1.txt  AddressBook2.txt  AddressBook3.txt  AddressBook4.txt  BirthdayEmail_王欣怡.txt  CMakeLists.txt  Core.hpp  LICENSE  MainWindow.cpp  MainWindow.hpp  README.md  main.cpp  main_terminal.cpp  run.bat  个人通讯录管理系统答辩PPT.pptx  项目展示文档.md
.claude/: settings.local.json
apps/desktop/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
apps/terminal/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/hello_contact/: core.hpp
data/: AddressBook1.txt  AddressBook2.txt  AddressBook3.txt  AddressBook4.txt  BirthdayEmail_1.txt
docs/: architecture.md  roadmap.md
llm/: CMakeLists.txt
scripts/: build.bat  build.sh  run.ps1
tests/: CMakeLists.txt  test_core.cpp
