cmake_minimum_required(VERSION 3.16)
project(AddressBook VERSION 2.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)

find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets Network)

add_executable(manager
    MainWindow.hpp
    MainWindow.cpp
    Core.hpp
)
target_link_libraries(manager PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Network)
target_include_directories(manager PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
